<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:background="@color/red_levis"
    tools:context=".MainActivity"
    tools:deviceIds="tv"
    tools:ignore="MissingPrefix">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.90"/>

    <RelativeLayout
        android:id="@+id/leftPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_weight="0.75">

        <ImageSwitcher
            android:id="@+id/productSwitcher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateFirstView="false"
            android:background="@color/playing_label_text"
            android:inAnimation="@android:anim/fade_in"
            android:outAnimation="@android:anim/fade_out">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="centerCrop" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="centerCrop" />
        </ImageSwitcher>

        <RelativeLayout
            android:id="@+id/priceContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignWithParentIfMissing="true"
            android:layout_marginBottom="@dimen/left_panel_bottom_margin"
            android:layout_marginStart="@dimen/left_panel_left_margin"
            android:visibility="visible">

            <pt.gngtv.main.widget.TextViewObliqueStrike
                android:id="@+id/discountLabel"
                fontPath="@string/roobotoCondensedLight"
                android:layout_width="@dimen/label_price_width"
                android:layout_height="wrap_content"
                android:background="@color/red_levis"
                android:gravity="center"
                android:paddingBottom="6dp"
                android:maxLines="1"
                android:paddingTop="6dp"
                android:textColor="@color/playing_label_text"
                android:textSize="@dimen/label_discount_text_size"
                tools:text="90€" />

            <TextView
                android:id="@+id/priceLabel"
                fontPath="@string/roobotoCondensedBold"
                android:layout_width="@dimen/label_price_width"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/discountLabel"
                android:background="@android:color/white"
                android:gravity="center"
                android:paddingBottom="6dp"
                android:paddingTop="6dp"
                android:singleLine="true"
                android:maxLines="1"
                android:textColor="@color/red_levis"
                android:textSize="@dimen/label_discount_text_size"
                tools:text="85€" />
        </RelativeLayout>

        <TextView
            android:id="@+id/productDescriptionLabel"
            fontPath="@string/roobotoCondensedLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/priceContainer"
            android:layout_alignStart="@+id/priceContainer"
            android:layout_marginBottom="@dimen/label_product_description_margin_bottom"
            android:layout_marginEnd="@dimen/left_panel_right_margin"
            android:background="@android:color/white"
            android:ellipsize="end"
            android:gravity="start"
            android:paddingBottom="3dp"
            android:paddingEnd="@dimen/product_description_label_padding_right"
            android:paddingStart="@dimen/product_description_label_padding_left"
            android:paddingTop="3dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/label_product_name_text_size"
            tools:text="L/s Barstow Western" />

       <!-- <View
            android:id="@+id/triangle"
            android:layout_width="@dimen/shape_triangle_height"
            android:layout_height="@dimen/shape_triangle_height"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_red_triangle"
            android:visibility="gone" />-->

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/moldura_smartv"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rightPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.45"
        android:background="@color/red_levis"
        android:paddingBottom="@dimen/right_panel_bottom_margin"
        android:paddingEnd="@dimen/right_panel_right_margin"
        android:paddingStart="@dimen/right_panel_left_margin"
        android:paddingTop="@dimen/right_panel_top_margin">

        <ImageView
            android:id="@+id/leviLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/levilogo"
            android:layout_marginLeft="10dp"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/connected_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_marginTop="20dp"
            android:text="@string/connected_store"
            android:layout_below="@+id/leviLogo"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignWithParentIfMissing="true"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/connected_store_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/connected_store"
            android:textColor="#ffffff"
            android:textSize="26sp"
            fontPath="@string/roobotoCondensedLight"
            android:text="@string/connected_store_message"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/connected_store_description"
            android:layout_above="@+id/connected_store_music"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginTop="20dp"
                fontPath="@string/roobotoCondensedBold"
                android:text="@string/users_wishlist_title"
                android:textAllCaps="true"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                fontPath="@string/roobotoCondensedLight"
                android:text="@string/users_wishlist_message"
                android:textSize="24sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/connected_store_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/songInfo"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginTop="20dp"
                fontPath="@string/roobotoCondensedBold"
                android:text="@string/smart_playlist_title"
                android:textAllCaps="true"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                fontPath="@string/roobotoCondensedLight"
                android:text="@string/smart_playlist_message"
                android:textSize="24sp"/>


        </LinearLayout>


        <RelativeLayout
            android:id="@+id/songInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#0f0"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp">

                <ImageView
                    android:id="@+id/albumCover"
                    android:layout_width="@dimen/playing_song_cover_width"
                    android:layout_height="@dimen/playing_song_cover_width"
                    android:layout_marginEnd="@dimen/playing_song_icon_margin_right"
                    android:background="@color/red_levis"
                    android:contentDescription="@null"
                    android:minHeight="70dp"
                    android:minWidth="70dp" />

                <TextView
                    android:id="@+id/playingLabel"
                    fontPath="@string/roobotoCondensedRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/albumCover"
                    android:layout_toEndOf="@+id/albumCover"
                    android:drawablePadding="15dp"
                    android:drawableStart="@drawable/icn_playing"
                    android:text="@string/playing_label"
                    android:textAllCaps="true"
                    android:textColor="@color/playing_label_text" />

                <TextView
                    android:id="@+id/playingSongTitle"
                    fontPath="@string/roobotoCondensedLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/albumCover"
                    android:layout_alignStart="@+id/playingLabel"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/playing_song_title_text_size"
                    tools:text="Can't feel my face" />

                <TextView
                    android:id="@+id/playingSongAlbumTitle"
                    fontPath="@string/roobotoCondensedBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/playingSongTitle"
                    android:layout_alignStart="@+id/playingLabel"
                    android:layout_below="@+id/playingLabel"
                    android:layout_marginBottom="-7dp"
                    android:ellipsize="end"
                    android:gravity="start|bottom"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/playing_song_title_text_size"
                    android:textStyle="bold"
                    tools:text="The Weeknd" />

            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/spotify_icon"/>

        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>